--- a/style.css
+++ b/style.css
@@ -251,21 +251,23 @@ h2 {
     display: inline-block;
   }
   section#contenido article {
-    border: 2px solid brown;
+    box-shadow: 0 0 6px rgba(0, 0, 0, 0.2);
     background: white;
-    border-radius: 7px;
-    border: 1px solid #c6cfd3;
+    border-radius: 5px;
     margin: 15px;
     padding: 20px;
   }
-  section#contenido article header.titulo {
-    border: 2px solid blue;
+  section#contenido article header.titulo h1 {
+    color: #6a747e;
+    font-family: 'Quicksand', cursive;
+    font-size: 2.5em;
+    letter-spacing: -4px;
+    text-align: center;
+    padding: 25px 0 35px 0;
   }
-  section#contenido article div.contenido {
-    border: 2px solid pink;
-  }
-  section#contenido article footer.social {
-    border: 2px solid orange;
+  section#contenido article div.contenido p {
+    margin: 0 10px 15px 10px;
+    font-size: .9em;
   }
   footer#footer {
     display: inline-block;
@@ -287,7 +289,7 @@ h2 {
     top: 60px;
     left: 270px;
   }
-  footer#footer #avatar p#nombre {
+  footer#footer #avatar a#nombre {
     color: #6f8194;
     font-size: 1.2em;
     font-weight: bold;
@@ -295,7 +297,7 @@ h2 {
     top: 70px;
     left: 370px;
   }
-  footer#footer #avatar p#twitter {
+  footer#footer #avatar a#twitter {
     color: #6f8194;
     font-size: 1.2em;
     position: absolute;
@@ -331,6 +333,14 @@ h2 {
     background: rgba(0, 0, 0, 0.7);
     -webkit-transition: all .2s ease;
     transition: all .2s ease;
+  }
+  footer#footer #fin_pagina {
+    height: 2px;
+    width: 95%;
+    background: #6f8194;
+    position: absolute;
+    top: 170px;
+    left: 28px;
   }
   footer#footer #github {
     width: 33%;
