--- a/less/bp3.less
+++ b/less/bp3.less
@@ -8,6 +8,7 @@ header#header {
 	left: 0px;
 	bottom: 0px;
 	margin: 10px;
+	display: inline-block;
 }
 	header#header div#titulo_principal {
 		// border: 2px solid green;
@@ -24,9 +25,41 @@ header#header {
 			margin-top: 5px;
 		}
 	header#header nav#menu {
-		border:2px solid orange;
+		// border:2px solid orange;
 		margin: 25px 7px 25px 7px ;
+		overflow-y: scroll;
+		height: 600px;
+		border-radius: 5px;
+
 	}
+	header#header nav#menu h3 {
+		background: #0d65f0;
+		border-radius: 5px;
+		padding: 5px 0 5px 10px;
+		margin: 20px 0 5px 0;
+		color: @colorfondo;
+	}
+	header#header nav#menu ul {
+		border: 1px solid rgba(111,129,148, .5);
+		border-radius: 5px;
+		padding: 4px 0 4px 10px;
+	}
+	header#header nav#menu ul:hover {
+		background: rgba(0,0,0,.05);
+		-webkit-transition: all .2s ease;
+		transition: all .2s ease;
+		color: @menutexto;
+	}
+		header#header nav#menu ul a {
+			text-decoration: none;
+			color: #0d65f0;
+			display: block;
+			padding: 4px 0;
+			border-bottom: 1px solid rgba(111,129,148, .5);
+		}
+		header#header nav#menu ul a:last-child {
+			border-bottom: none;
+		}
 	header#header figure#logo {
 		// border:2px solid green;
 		text-align: center;
@@ -41,7 +74,6 @@ section#wrapper {
 }
 section#contenido {
 	// border:2px solid yellow;
-	float: left;
 	max-width: 1000px;
 	margin-left: 335px;
 	display: inline-block;
@@ -145,14 +177,6 @@ footer#footer {
 			-webkit-transition: all .2s ease;
 			transition: all .2s ease;
 		}
-	footer#footer #fin_pagina {
-		height: 2px;
-		width: 95%;
-		background: @colorprincipal;
-		position: absolute;
-		top: 170px;
-		left: 28px;
-	}
 	footer#footer #github {
 		// border: 2px solid;
 		width: 33%;
