--- a/style.css
+++ b/style.css
@@ -218,6 +218,7 @@ h2 {
     left: 0px;
     bottom: 0px;
     margin: 10px;
+    display: inline-block;
   }
   header#header div#titulo_principal {
     text-align: center;
@@ -233,8 +234,38 @@ h2 {
     margin-top: 5px;
   }
   header#header nav#menu {
-    border: 2px solid orange;
     margin: 25px 7px 25px 7px ;
+    overflow-y: scroll;
+    height: 600px;
+    border-radius: 5px;
+  }
+  header#header nav#menu h3 {
+    background: #0d65f0;
+    border-radius: 5px;
+    padding: 5px 0 5px 10px;
+    margin: 20px 0 5px 0;
+    color: #edf1f3;
+  }
+  header#header nav#menu ul {
+    border: 1px solid rgba(111, 129, 148, 0.5);
+    border-radius: 5px;
+    padding: 4px 0 4px 10px;
+  }
+  header#header nav#menu ul:hover {
+    background: rgba(0, 0, 0, 0.05);
+    -webkit-transition: all .2s ease;
+    transition: all .2s ease;
+    color: #6f8194;
+  }
+  header#header nav#menu ul a {
+    text-decoration: none;
+    color: #0d65f0;
+    display: block;
+    padding: 4px 0;
+    border-bottom: 1px solid rgba(111, 129, 148, 0.5);
+  }
+  header#header nav#menu ul a:last-child {
+    border-bottom: none;
   }
   header#header figure#logo {
     text-align: center;
@@ -245,7 +276,6 @@ h2 {
     margin: 20px auto 10px auto;
   }
   section#contenido {
-    float: left;
     max-width: 1000px;
     margin-left: 335px;
     display: inline-block;
@@ -333,14 +363,6 @@ h2 {
     background: rgba(0, 0, 0, 0.7);
     -webkit-transition: all .2s ease;
     transition: all .2s ease;
-  }
-  footer#footer #fin_pagina {
-    height: 2px;
-    width: 95%;
-    background: #6f8194;
-    position: absolute;
-    top: 170px;
-    left: 28px;
   }
   footer#footer #github {
     width: 33%;
