Corregidos algunos problemas

--- a/less/bp3.less
+++ b/less/bp3.less
@@ -8,7 +8,6 @@ header#header {
 	left: 0px;
 	bottom: 0px;
 	margin: 10px;
-	display: inline-block;
 }
 	header#header div#titulo_principal {
 		// border: 2px solid green;
@@ -71,6 +70,7 @@ header#header {
 		}
 section#wrapper {
 	// border:2px solid red;
+	overflow: hidden;
 }
 section#contenido {
 	// border:2px solid yellow;
