--- a/style.css
+++ b/style.css
@@ -33,8 +33,11 @@
 .icon-bubble:before {
   content: "\e614";
 }
-.icon-play:before {
+.icon-uniF7BA:before {
   content: "\e600";
+}
+.icon-uniF7C5:before {
+  content: "\e603";
 }
 .icon-book:before {
   content: "\e60b";
@@ -53,6 +56,33 @@
 }
 .icon-uniE613:before {
   content: "\e613";
+}
+.icon-number:before {
+  content: "\e608";
+}
+.icon-number2:before {
+  content: "\e609";
+}
+.icon-number3:before {
+  content: "\e60a";
+}
+.icon-number4:before {
+  content: "\e60c";
+}
+.icon-number5:before {
+  content: "\e60d";
+}
+.icon-number6:before {
+  content: "\e60e";
+}
+.icon-number7:before {
+  content: "\e60f";
+}
+.icon-number8:before {
+  content: "\e615";
+}
+.icon-number9:before {
+  content: "\e616";
 }
 html,
 body,
@@ -235,33 +265,66 @@ h2 {
   header#header nav#menu {
     margin: 25px 7px 25px 7px ;
     overflow-y: scroll;
-    height: 600px;
+    height: 60%;
     border-radius: 5px;
   }
-  header#header nav#menu h3 {
+  header#header nav#menu a {
+    text-decoration: none;
+    position: relative;
+  }
+  header#header nav#menu a .icon-uniE613 {
+    position: absolute;
+    right: 5px;
+    top: 28%;
+  }
+  header#header nav#menu a .icon-uniE613:before {
+    content: "\e613";
+  }
+  header#header nav#menu a:hover {
+    text-decoration: none;
+  }
+  header#header nav#menu a h3 {
     background: #0d65f0;
     border-radius: 5px;
     padding: 5px 0 5px 10px;
     margin: 20px 0 5px 0;
     color: #edf1f3;
+    position: relative;
+  }
+  header#header nav#menu a h3 .icon-number,
+  .icon-number2,
+  .icon-number3 {
+    position: absolute;
+    right: 5px;
+    top: 3px;
+    font-size: 1.2em;
+    font-weight: bold;
+  }
+  header#header nav#menu a h3 .icon-number:before {
+    content: "\e608";
+  }
+  header#header nav#menu a h3 .icon-number2:before {
+    content: "\e609";
+  }
+  header#header nav#menu a h3 .icon-number3:before {
+    content: "\e60a";
+  }
+  header#header nav#menu h3:hover {
+    background: rgba(0, 0, 0, 0.7);
   }
   header#header nav#menu ul {
     border: 1px solid rgba(111, 129, 148, 0.5);
     border-radius: 5px;
-    padding: 4px 0 4px 10px;
-  }
-  header#header nav#menu ul:hover {
-    background: rgba(0, 0, 0, 0.05);
-    -webkit-transition: all .2s ease;
-    transition: all .2s ease;
-    color: #6f8194;
   }
   header#header nav#menu ul a {
     text-decoration: none;
     color: #0d65f0;
     display: block;
-    padding: 4px 0;
+    padding: 4px 30px 4px 10px;
     border-bottom: 1px solid rgba(111, 129, 148, 0.5);
+  }
+  header#header nav#menu ul a:hover {
+    color: rgba(0, 0, 0, 0.7);
   }
   header#header nav#menu ul a:last-child {
     border-bottom: none;
@@ -354,7 +417,7 @@ h2 {
     width: 70px;
     color: #edf1f3;
     text-align: center;
-    line-height: 1.85;
+    line-height: 1.93;
     font-size: 2.3em;
   }
   footer#footer #emial .icon-mail:before {
