--- a/less/font-face.less
+++ b/less/font-face.less
@@ -1,5 +1,4 @@
 // Font-face
-
 @font-face {
 	font-family: 'icomoon';
 	src:url('fonts/icomoon.eot');
@@ -40,8 +39,11 @@
 .icon-bubble:before {
 	content: "\e614";
 }
-.icon-play:before {
+.icon-uniF7BA:before {
 	content: "\e600";
+}
+.icon-uniF7C5:before {
+	content: "\e603";
 }
 .icon-book:before {
 	content: "\e60b";
@@ -60,4 +62,31 @@
 }
 .icon-uniE613:before {
 	content: "\e613";
+}
+.icon-number:before {
+	content: "\e608";
+}
+.icon-number2:before {
+	content: "\e609";
+}
+.icon-number3:before {
+	content: "\e60a";
+}
+.icon-number4:before {
+	content: "\e60c";
+}
+.icon-number5:before {
+	content: "\e60d";
+}
+.icon-number6:before {
+	content: "\e60e";
+}
+.icon-number7:before {
+	content: "\e60f";
+}
+.icon-number8:before {
+	content: "\e615";
+}
+.icon-number9:before {
+	content: "\e616";
 }
