Terminado de estilar menú vista escritorio

--- a/less/bp3.less
+++ b/less/bp3.less
@@ -46,7 +46,7 @@ header#header {
 	header#header nav#menu a:hover {
 		text-decoration: none;
 	}
-	header#header nav#menu a h3 {
+	header#header nav#menu a p {
 		background: #0d65f0;
 		border-radius: 5px;
 		padding: 5px 0 5px 10px;
@@ -54,23 +54,23 @@ header#header {
 		color: @colorfondo;
 		position: relative;
 	}
-	header#header nav#menu a h3 .icon-number, .icon-number2, .icon-number3 {
+	header#header nav#menu a p .icon-number, .icon-number2, .icon-number3 {
 		position: absolute;
 		right: 5px;
-		top: 3px;
+		top: 5px;
 		font-size: 1.2em;
 		font-weight: bold;
 	}
-	header#header nav#menu a h3 .icon-number:before {
-		content: "\e608";
+	header#header nav#menu a p .icon-number:before {
+		content: "\e605";
 	}
-	header#header nav#menu a h3 .icon-number2:before {
-		content: "\e609";
+	header#header nav#menu a p .icon-number2:before {
+		content: "\e617";
 	}
-	header#header nav#menu a h3 .icon-number3:before {
-		content: "\e60a";
+	header#header nav#menu a p .icon-number3:before {
+		content: "\e618";
 	}
-	header#header nav#menu h3:hover {
+	header#header nav#menu p:hover {
 		background: @colorhover;
 	}
 	header#header nav#menu ul {
