--- a/less/font-face.less
+++ b/less/font-face.less
@@ -1,4 +1,3 @@
-// Font-face
 @font-face {
 	font-family: 'icomoon';
 	src:url('fonts/icomoon.eot');
@@ -89,4 +88,31 @@
 }
 .icon-number9:before {
 	content: "\e616";
+}
+.icon-number:before {
+	content: "\e605";
+}
+.icon-number2:before {
+	content: "\e617";
+}
+.icon-number3:before {
+	content: "\e618";
+}
+.icon-number4:before {
+	content: "\e619";
+}
+.icon-number5:before {
+	content: "\e61a";
+}
+.icon-number6:before {
+	content: "\e61b";
+}
+.icon-number7:before {
+	content: "\e61c";
+}
+.icon-number8:before {
+	content: "\e61d";
+}
+.icon-number9:before {
+	content: "\e61e";
 }
