--- a/style.css
+++ b/style.css
@@ -84,6 +84,33 @@
 .icon-number9:before {
   content: "\e616";
 }
+.icon-number:before {
+  content: "\e605";
+}
+.icon-number2:before {
+  content: "\e617";
+}
+.icon-number3:before {
+  content: "\e618";
+}
+.icon-number4:before {
+  content: "\e619";
+}
+.icon-number5:before {
+  content: "\e61a";
+}
+.icon-number6:before {
+  content: "\e61b";
+}
+.icon-number7:before {
+  content: "\e61c";
+}
+.icon-number8:before {
+  content: "\e61d";
+}
+.icon-number9:before {
+  content: "\e61e";
+}
 html,
 body,
 body div,
@@ -283,7 +310,7 @@ h2 {
   header#header nav#menu a:hover {
     text-decoration: none;
   }
-  header#header nav#menu a h3 {
+  header#header nav#menu a p {
     background: #0d65f0;
     border-radius: 5px;
     padding: 5px 0 5px 10px;
@@ -291,25 +318,25 @@ h2 {
     color: #edf1f3;
     position: relative;
   }
-  header#header nav#menu a h3 .icon-number,
+  header#header nav#menu a p .icon-number,
   .icon-number2,
   .icon-number3 {
     position: absolute;
     right: 5px;
-    top: 3px;
+    top: 5px;
     font-size: 1.2em;
     font-weight: bold;
   }
-  header#header nav#menu a h3 .icon-number:before {
-    content: "\e608";
+  header#header nav#menu a p .icon-number:before {
+    content: "\e605";
   }
-  header#header nav#menu a h3 .icon-number2:before {
-    content: "\e609";
+  header#header nav#menu a p .icon-number2:before {
+    content: "\e617";
   }
-  header#header nav#menu a h3 .icon-number3:before {
-    content: "\e60a";
+  header#header nav#menu a p .icon-number3:before {
+    content: "\e618";
   }
-  header#header nav#menu h3:hover {
+  header#header nav#menu p:hover {
     background: rgba(0, 0, 0, 0.7);
   }
   header#header nav#menu ul {
