--- a/less/bp3.less
+++ b/less/bp3.less
@@ -33,6 +33,53 @@ header#header {
 			height: auto;
 			margin:  20px auto 10px auto;
 		}
+	header#header nav#menu {
+		margin: 25px 7px 25px 7px ;
+		overflow-y: scroll;
+		height: 60%;
+	}
+		header#header nav#menu ul {
+			border: 1px solid rgba(111,129,148, .5);
+			border-radius: 5px;
+		}
+			header#header nav#menu ul li {
+				position: relative;
+				border-bottom: 1px solid rgba(111,129,148, .5);
+			}
+				header#header nav#menu ul li a {
+						color: #0d65f0;
+						display: block;
+						padding: 4px 40px 4px 10px;
+						text-decoration: none;
+				}
+					header#header nav#menu ul li a span {
+						position: absolute;
+						right: 5px;
+						top: 5px;
+					}
+			header#header nav#menu ul li:last-child {
+				border-bottom: none;
+			}
+		header#header nav#menu ul.capitulo {
+			background: @azul;
+			border-radius: 5px;
+			display: block;
+			position: relative;
+			margin: 20px 0 5px 0;
+		}
+		header#header nav#menu ul.capitulo:hover {
+			background: @colorhover;
+		}
+			header#header nav#menu ul.capitulo a {
+				color: @colorfondo;
+				padding: 3px 10px 3px 10px;
+				text-decoration: none;
+			}
+				header#header nav#menu ul.capitulo a span {
+					position: absolute;
+					right: 5px;
+					top: 5px;
+				}
 section#wrapper {
 	// border:2px solid red;
 	overflow: hidden;
