--- a/less/variables.less
+++ b/less/variables.less
@@ -37,6 +37,9 @@
 @ventanaterminal: rgba(0,0,0,.65);
 @ventanaterminalcopiar: rgba(0,0,0,.3);
 
+// azul
+@azul: #0d65f0;
+
 // Márgenes =========================================
 
 // Margen externo
