--- a/less/variables.less
+++ b/less/variables.less
@@ -43,7 +43,8 @@
 // Márgenes =========================================
 
 // Margen externo
-@margenE: 15px;
+@I: 20px;
+@inI: 15px;
 
 // Margen interno
 @margenI: 20px;
