--- a/less/bp3.less
+++ b/less/bp3.less
@@ -84,7 +84,6 @@ header#header {
 			}
 			header#header nav#menu ul.capitulo a:hover {
 				color: @colorfondo;
-
 			}
 				header#header nav#menu ul.capitulo a span {
 					position: absolute;
@@ -101,27 +100,27 @@ section#contenido {
 	margin-left: 335px;
 	display: inline-block;
 	}
-	section#contenido article {
+	section#contenido article.main {
 		box-shadow: 0 0 6px rgba(0,0,0,0.2);		
 		background: white;
 		border-radius: 5px;
 		margin: @inI;
+		padding-bottom: 10px;
 	}
 		section#contenido article header#intra_article {
 			padding: @I 0;
 		}
 			section#contenido article header#intra_article div.capitulo {
 				background: @azul;
+				border-radius: 0 50px 50px 0;
 				color: @colorfondo;
 				display: inline-block;
 				float: left;
+				font-size: .9em;
 				height: 40px;
 				position: relative;
 				vertical-align: top;
 				width: 80px;
-				border-radius: 0 50px 50px 0;
-				font-size: .9em;
-
 			}
 				section#contenido article header#intra_article div.capitulo span {
 					position: absolute;
@@ -133,20 +132,132 @@ section#contenido {
 					right: 12px;
 					top: 8px;
 				}
-			section#contenido article header#intra_article h3 {
-				display: inline-block;
-				vertical-align: top;
-				color: @tituloarticle;
-				font-family: @tituloarticulo;
-				font-size: 2.5em;
-				letter-spacing: -4px;
-				text-align: left;
-				padding: 0 @inI;
+				section#contenido article header#intra_article h3 {
+					display: inline-block;
+					vertical-align: top;
+					color: @tituloarticle;
+					font-family: @tituloarticulo;
+					font-size: 2.5em;
+					letter-spacing: -4px;
+					text-align: left;
+					padding: 0 @inI;
+
+				}
+				section#contenido article header#intra_article p {
+					margin: 10px @I @I @I;
+				}
+		section#contenido article p {
+			color: @colorprincipal;
+			font-size: .9em;
+			line-height: 1.6;
+		}
+		section#contenido article section#tema {
+			margin: 0 @I @I @I;
+		}
+			section#contenido article section#tema article header#tema {
 
 			}
-			section#contenido article header#intra_article p {
-				margin-top: 5px;
-			}
+				section#contenido article section#tema article header#tema h4 {
+					color: @colorhover;
+					font-size: 1.5em;
+					font-weight: normal;
+					border-bottom: 1px solid @colorborde;
+					padding-bottom: 5px;
+					margin: 0 0 10px 0;
+				}
+					section#contenido article section#tema article header#tema h4 span {
+						font-weight: bold;
+					}
+		section#contenido article section#tema figure {
+			// border:1px solid;
+		}
+			section#contenido article section#tema figure div.terminal {
+				background: @ventanaterminal;
+				border-radius: 0 0 4px 4px;
+				-webkit-box-shadow: 0px 1px 1px rgba(111,129,148,.5);
+				margin: 30px 25px 70px 25px;
+				position: relative;
+				}
+				section#contenido article section#tema figure div.terminal div#maquina pre {
+					color: @textoterminal;
+					line-height: 1.5;
+					padding: 30px 15px 0 20px;
+					}
+					section#contenido article section#tema figure div.terminal div#maquina pre span.tipear {
+						color: @textoterminaltipear;
+					}
+					section#contenido article section#tema figure div.terminal div#maquina pre span.copiar {
+						background: @ventanaterminalcopiar;
+						border-radius: 10px;
+						padding: 2px 5px;
+						color: @textoterminal;
+					}
+				section#contenido article section#tema figure div.terminal div.barra {
+					background: lightgrey;
+					border-radius: 6px 6px 0 0;
+					position: absolute;
+					width: 100%;
+					top: -10px;
+					}
+					section#contenido article section#tema figure div.terminal div.barra pre#barra {
+						color: grey;
+						font-size: .8em;
+						line-height: 2;
+						text-align: center;
+						}
+				section#contenido article section#tema figure div.terminal div.nota {
+					position: relative;
+					bottom: -55px;
+					color: grey;
+					left: 20px;
+					font-size: .9em;
+					}
+					section#contenido article section#tema figure div.terminal div.nota .color_tipear {
+						display: inline-block;
+						width: 30%;
+						}
+						section#contenido article section#tema figure div.terminal div.nota .color_tipear span {
+						background: rgba(0,0,0,.5);
+						border-radius: 15px;
+						color: @textoterminaltipear;
+						height: 20px;
+						margin-right: 5px;
+						padding: 5px 10px 5px 10px;
+						width: auto;
+						}
+					section#contenido article section#tema figure div.terminal div.nota .color_maquina {
+						display: inline-block;
+						width: 30%;
+						}
+						section#contenido article section#tema figure div.terminal div.nota .color_maquina span {
+						background: rgba(0,0,0,.5);
+						border-radius: 15px;
+						color: @textoterminal;
+						height: 20px;
+						margin-right: 5px;
+						padding: 5px 10px 5px 10px;
+						width: auto;
+						}
+					section#contenido article section#tema figure div.terminal div.nota .color_copiar {
+						display: inline-block;
+						width: 30%;
+						}
+						section#contenido article section#tema figure div.terminal div.nota .color_copiar {
+						display: inline-block;
+						width: 30%;
+						}
+							section#contenido article section#tema figure div.terminal div.nota .color_copiar span {
+								background: rgba(0,0,0,.7);
+								border-radius: 15px;
+								color: @textoterminal;
+								height: 20px;
+								margin-right: 5px;
+								padding: 5px 10px 5px 10px;
+								width: auto;
+								}
+		section#contenido article section#tema p {
+			margin: 0 0 @I 0;
+		}
 footer#footer {
 	// border: 2px solid;
 	display: inline-block;
