Añadidos nuevos apartados y varias mejoras de estilo

--- a/fonts/icomoon/style.css
+++ b/fonts/icomoon/style.css
@@ -44,6 +44,12 @@
 .icon-uniF7C5:before {
 	content: "\e603";
 }
+.icon-in:before {
+	content: "\e620";
+}
+.icon-wand:before {
+	content: "\e621";
+}
 .icon-book:before {
 	content: "\e60b";
 }
@@ -118,4 +124,7 @@
 }
 .icon-rocket:before {
 	content: "\e61f";
+}
+.icon-code:before {
+	content: "\e622";
 }
