--- a/style.css
+++ b/style.css
@@ -39,6 +39,12 @@
 .icon-uniF7C5:before {
   content: "\e603";
 }
+.icon-in:before {
+  content: "\e620";
+}
+.icon-wand:before {
+  content: "\e621";
+}
 .icon-book:before {
   content: "\e60b";
 }
@@ -113,6 +119,9 @@
 }
 .icon-rocket:before {
   content: "\e61f";
+}
+.icon-code:before {
+  content: "\e622";
 }
 html,
 body,
@@ -314,7 +323,7 @@ h2 {
     border-bottom: 1px solid rgba(111, 129, 148, 0.5);
   }
   header#header nav#menu ul li a {
-    color: #0d65f0;
+    color: #3d63f5;
     display: block;
     padding: 4px 40px 4px 10px;
     text-decoration: none;
@@ -335,7 +344,7 @@ h2 {
     border-bottom: none;
   }
   header#header nav#menu ul.capitulo {
-    background: #0d65f0;
+    background: #3d63f5;
     border-radius: 5px;
     display: block;
     position: relative;
@@ -376,7 +385,7 @@ h2 {
     padding: 20px 0;
   }
   section#contenido article header#intra_article div.capitulo {
-    background: #0d65f0;
+    background: #6f8194;
     border-radius: 0 50px 50px 0;
     color: #edf1f3;
     display: inline-block;
@@ -397,6 +406,9 @@ h2 {
     right: 12px;
     top: 8px;
   }
+  section#contenido article header#intra_article div.capitulo span.icon-books {
+    right: 12px;
+  }
   section#contenido article header#intra_article h3 {
     display: inline-block;
     vertical-align: top;
@@ -415,16 +427,11 @@ h2 {
     font-size: .9em;
     line-height: 1.6;
   }
-  section#contenido article section#tema {
-    margin: 0 20px 20px 20px;
-  }
   section#contenido article section#tema article header#tema h4 {
-    color: rgba(0, 0, 0, 0.7);
+    color: #6f8194;
     font-size: 1.5em;
     font-weight: normal;
-    border-bottom: 1px solid #c6cfd3;
     padding-bottom: 5px;
-    margin: 0 0 10px 0;
   }
   section#contenido article section#tema article header#tema h4 span {
     font-weight: bold;
@@ -513,6 +520,18 @@ h2 {
     padding: 5px 10px 5px 10px;
     width: auto;
   }
+  section#contenido article section#tema figure div.imagen {
+    background: #ebf0f4;
+    width: 100%;
+    height: auto;
+    padding: 30px 0;
+    border-top: 1px solid #c6ced2;
+    border-bottom: 1px solid #c6ced2;
+  }
+  section#contenido article section#tema figure div.imagen img {
+    display: block;
+    margin: 0 auto;
+  }
   section#contenido article section#tema p {
     margin: 0 0 20px 0;
   }
@@ -563,7 +582,7 @@ h2 {
     left: 70px;
   }
   footer#footer #emial .icon-mail {
-    background: #0d65f0;
+    background: #3d63f5;
     border-radius: 40px;
     height: 70px;
     width: 70px;
