--- a/less/variables.less
+++ b/less/variables.less
@@ -10,7 +10,7 @@
 // Color fondo
 @colorfondo: rgb(237,241,243);
 // Color borde
-@colorborde: #c6cfd3;
+@colorborde: rgb(198,207,211);;
 // Color hover
 @colorhover: rgba(0,0,0,.7);
 
